Fix contact module

--- a/themes/coHub/layouts/partials/cta.html
+++ b/themes/coHub/layouts/partials/cta.html
@@ -6,10 +6,11 @@
       <div class="col-lg-12">
         <div class="cta-content">
           <h2>{{.title}}</h2>
+          <p style="font-size: 12px;">{{.subtitle}}</p>
           <a href="{{.buttonTarget | absURL }}" class="btn btn-primary mb-3">
-              Planifier
+              Prendre un rendez-vous
           </a>
-          <p style="font-size: 12px;">ou jetez un oeil à nos <a class="scroll-to" href="{{ $.Site.BaseURL }}{{ .priceLink }}"> formules</a></p>
+          <p style="font-size: 12px;">ou consultez nos <a class="scroll-to" href="{{ $.Site.BaseURL }}{{ .priceLink }}">formules</a></p>
         </div>
       </div>
     </div>
