--- a/themes/coHub/assets/scss/components/_pricing.scss
+++ b/themes/coHub/assets/scss/components/_pricing.scss
@@ -19,7 +19,7 @@
         margin-bottom: 20px;
       }
       span.price {
-        font-size: 70px;
+        font-size: 45px;
         font-weight: 400;
         font-family: $primary-font;
         color: $text-color-dark;
@@ -45,8 +45,9 @@
       }
       p {
         margin-top: 20px;
+        padding-bottom: 10px;
         font-size: 14px;
-        width: 80%;
+        width: 90%;
         margin: 0 auto;
       }
     }
