--- a/themes/coHub/assets/scss/components/_story.scss
+++ b/themes/coHub/assets/scss/components/_story.scss
@@ -1,6 +1,7 @@
 .story {
   position: relative;
   display: flex;
+  padding-bottom: 40px;
   align-items: center;
   &-content {
     @include tablet {
@@ -9,6 +10,19 @@
     h2 {
       margin-bottom: 20px;
     }
+  }
+  .story-content {
+     font-size: 14px;
+     text-align: center;
+     padding-bottom: 35px;
+  }
+  h3 {
+    text-align: center;
+  }
+  img {
+    border: 0px solid;
+    border-radius: 6px;
+    margin-bottom: 15px;
   }
   &-slider {
     .slider-item {
