--- a/themes/coHub/layouts/partials/espace.html
+++ b/themes/coHub/layouts/partials/espace.html
@@ -7,7 +7,7 @@
         <div class="section-title">
           <h2>{{ .title | safeHTML }}</h2>
           <p>
-            {{.subtitle}}
+            {{.subtitle | safeHTML}}
           </p>
         </div>
       </div>
@@ -20,9 +20,9 @@
       {{ range $index, $element := .features }}
       <div class="col-lg-4 col-md-6">
         <img src="{{ .image | absURL }}" alt="images" style="width: 100%;">
-        <h3>{{$element.feature}}</h3>
+        <h3>{{$element.feature | safeHTML}}</h3>
         <div class="story-content">
-          {{$element.description}}
+          {{$element.description | safeHTML}}
         </div>
       </div>
       {{end }}
