--- a/themes/coHub/layouts/partials/head.html
+++ b/themes/coHub/layouts/partials/head.html
@@ -1,6 +1,7 @@
   <head>
     <meta charset="utf-8" />
     <title>{{.Title}}</title>
+    <meta name="description" content="Amicale du WiFi | L'espace de coworking associatif au centre du village de Fully, Valais, Suisse">
 
     {{ "<!--Meta For No Index-->" | safeHTML }}
     <meta name="robots" content="noindex, Nofollow, Noimageindex">
