--- a/themes/coHub/layouts/partials/hero.html
+++ b/themes/coHub/layouts/partials/hero.html
@@ -3,7 +3,7 @@
   <section class="hero" style="background-image: url( {{ .heroBGimg }} );">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-12">
+        <div class="col-lg-4 col-md-5 col-sm-7 col-8">
           <div class="hero-content">
             <h1>{{.title | safeHTML}}</h1>
             <p>
