--- a/themes/coHub/layouts/partials/service.html
+++ b/themes/coHub/layouts/partials/service.html
@@ -7,7 +7,7 @@
         <div class="section-title">
          <h2> {{.title }} </h2>
           <p>
-              {{.subtitle}}
+              {{.subtitle | safeHTML}}
           </p>
         </div>
       </div>
