--- a/themes/coHub/assets/scss/components/_footer.scss
+++ b/themes/coHub/assets/scss/components/_footer.scss
@@ -14,6 +14,10 @@
     margin-bottom: 30px;
   }
 
+  &-logo img {
+    width: 150px;
+  }
+
   &-menu {
     display: flex;
     align-items: center;
