--- a/themes/coHub/layouts/partials/head.html
+++ b/themes/coHub/layouts/partials/head.html
@@ -3,8 +3,8 @@
     <title>{{.Title}}</title>
     <meta name="description" content="l'Amicale du Wifi | L'espace de coworking associatif au centre du village de Fully, Valais, Suisse">
 
-    {{ "<!--Meta For No Index-->" | safeHTML }}
-    <meta name="robots" content="noindex, Nofollow, Noimageindex">
+    {{ "<!--Meta For Index-->" | safeHTML }}
+    <meta name="robots" content="index, follow, Noimageindex">
 
     {{ "<!--mobile responsive meta-->" | safeHTML }}
     <meta name="viewport" content="width=device-width, initial-scale=1" />
