--- a/themes/coHub/layouts/partials/head.html
+++ b/themes/coHub/layouts/partials/head.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index, follow, Noimageindex">
 
     {{ "<!--mobile responsive meta-->" | safeHTML }}
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1" />-->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
