--- a/themes/coHub/layouts/partials/hero.html
+++ b/themes/coHub/layouts/partials/hero.html
@@ -2,5 +2,25 @@
 {{if .enable}}
   <section class="hero" style="background-image: url( {{ .heroBGimg }} );">
   </section>
+  <!-- Link to collaborative campaign -->
+  <section class="_cta" style="padding-top: 40px;">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="cta-content">
+          <h2>Soutenez l'Amicale du Wifi</h2>
+          <p style="font-size: 16px; padding-right: 150px; padding-left: 150px;">
+            Nous cherchons des membres pour rejoindre notre association et des parrainages pour compléter les infrastructures de l'espace par le biais d'une campagne collaborative sur la plateforme <img src="https://www.lokalhelden.ch/projects/default/dist/assets/logo/lokalhelden_fr.svg" alt="Raiffeisen Heroslocaux" width="100px" style="margin-left: 2px; padding-bottom: 18px;" />
+            
+          </p>
+          <a href="https://www.lokalhelden.ch/fr/amicalewifi" class="btn btn-primary mb-3">
+              Découvrir nos contreparties uniques
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 {{end}}
 {{end}}
