Call out to join the collaborative campaign

--- a/themes/coHub/layouts/partials/hero.html
+++ b/themes/coHub/layouts/partials/hero.html
@@ -3,14 +3,14 @@
   <section class="hero" style="background-image: url( {{ .heroBGimg }} );">
   </section>
   <!-- Link to collaborative campaign -->
-  <section class="_cta" style="padding-top: 40px;">
+  <section class="_cta" style="padding: 40px;background:#f5ee71;">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
         <div class="cta-content">
           <h2>Soutenez l'Amicale du Wifi</h2>
-          <p style="font-size: 16px; padding-right: 150px; padding-left: 150px;">
-            Nous cherchons des membres pour rejoindre notre association et des parrainages pour compléter les infrastructures de l'espace par le biais d'une campagne collaborative sur la plateforme <img src="https://www.lokalhelden.ch/projects/default/dist/assets/logo/lokalhelden_fr.svg" alt="Raiffeisen Heroslocaux" width="100px" style="margin-left: 2px; padding-bottom: 18px;" />
+          <p style="font-size: 16px; padding-right: 50px; padding-left: 50px; color:black;">
+            Rejoingnez-nous comme membre ou parrainez l'espace via notre campagne collaborative sur la plateforme <a href="https://www.lokalhelden.ch/fr/amicalewifi"><img src="https://www.lokalhelden.ch/projects/default/dist/assets/logo/lokalhelden_fr.svg" alt="Raiffeisen Heroslocaux" width="100px" style="margin-left: 2px; padding-bottom: 18px;" /></a>
             
           </p>
           <a href="https://www.lokalhelden.ch/fr/amicalewifi" class="btn btn-primary mb-3">
