--- a/themes/coHub/layouts/partials/hero.html
+++ b/themes/coHub/layouts/partials/hero.html
@@ -3,7 +3,7 @@
   <section class="hero" style="background-image: url( {{ .heroBGimg }} );">
   </section>
   <!-- Link to collaborative campaign -->
-  <section class="_cta" style="padding: 40px;background:#f5ee71;">
+  <section class="_cta" style="padding: 40px;">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
