--- a/themes/coHub/layouts/partials/hero.html
+++ b/themes/coHub/layouts/partials/hero.html
@@ -10,7 +10,7 @@
         <div class="cta-content">
           <h2>Soutenez l'Amicale du Wifi</h2>
           <p style="font-size: 16px; padding-right: 50px; padding-left: 50px; color:black;">
-            Rejoingnez-nous comme membre ou parrainez l'espace via notre campagne collaborative sur la plateforme <a href="https://www.lokalhelden.ch/fr/amicalewifi"><img src="https://www.lokalhelden.ch/projects/default/dist/assets/logo/lokalhelden_fr.svg" alt="Raiffeisen Heroslocaux" width="100px" style="margin-left: 2px; padding-bottom: 18px;" /></a>
+            Rejoignez-nous comme membre ou parrainez l'espace via notre campagne collaborative sur la plateforme <a href="https://www.lokalhelden.ch/fr/amicalewifi"><img src="https://www.lokalhelden.ch/projects/default/dist/assets/logo/lokalhelden_fr.svg" alt="Raiffeisen Heroslocaux" width="100px" style="margin-left: 2px; padding-bottom: 18px;" /></a>
             
           </p>
           <a href="https://www.lokalhelden.ch/fr/amicalewifi" class="btn btn-primary mb-3">
