--- a/themes/coHub/layouts/index.html
+++ b/themes/coHub/layouts/index.html
@@ -8,5 +8,6 @@
   {{ partial "feedback.html" . }}
   {{ partial "pricing.html" . }}
   {{ partial "faq.html" . }}
+  {{ partial "investor.html" . }}
   {{ partial "contactAddress.html" . }}
 {{end}}
