--- a/themes/coHub/layouts/partials/investor.html
+++ b/themes/coHub/layouts/partials/investor.html
@@ -10,20 +10,29 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      {{ range .investor}}
-      <div class="col-lg-3">
-        <div class="member-informashion">
-          <div class="member-thume">
-            <img src="{{ .image | absURL }}" alt="image">
-          </div>
+    {{ range .category}}
+    <div class="container" style="text-align: center;">
+      <div class="row">
+        <div class="col-lg-12">
           <h3>{{.name}}</h3>
-          <p>{{.post}}</p>
         </div>
       </div>
-      {{end}}
-
     </div>
+    <div class="container">
+      <div class="row">
+        {{$size := .size}}
+        {{ range .investors}}
+         <div class="col-lg-{{$size}}">
+            <div class="member-informashion">
+              <div class="member-thume">
+                <a href="{{.link}}"><img src="{{ .image | absURL }}" alt="{{.name}}"></a>
+              </div>
+            </div>
+          </div>
+        {{end}}
+      </div>
+    </div>
+    {{end}}
   </div>
 </section>
 {{end}}
