--- a/themes/coHub/layouts/partials/investor.html
+++ b/themes/coHub/layouts/partials/investor.html
@@ -11,16 +11,16 @@
       </div>
     </div>
     {{ range .category}}
-    <div class="container" style="text-align: center;">
-      <div class="row">
-        <div class="col-lg-12">
-          <h3>{{.name}}</h3>
-        </div>
-      </div>
-    </div>
+    {{$size := .size}}
     <div class="container">
       <div class="row">
-        {{$size := .size}}
+        <div class="col-lg-{{$size}}">
+            <div class="member-informashion">
+              <div class="member-thume">
+                <img src="{{ .logo | absURL }}" alt="{{.logo}}">
+              </div>
+            </div>
+          </div>
         {{ range .investors}}
          <div class="col-lg-{{$size}}">
             <div class="member-informashion">
