--- a/themes/coHub/layouts/partials/investor.html
+++ b/themes/coHub/layouts/partials/investor.html
@@ -33,7 +33,28 @@
       </div>
     </div>
     {{end}}
+    <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="cta-content">
+          <p style="font-size: 16px; padding-right: 50px; padding-left: 50px; color:black;">
+            L'Amicale du Wifi remercie chaleureusement ses nombreux <a href="https://www.lokalhelden.ch/fr/amicalewifi">parrains et marraines</a>. Soutenez votre espace de coworking local en devenant membre de notre association ou en faisant un don.
+          </p>
+          <a href="/membre" class="btn btn-primary mb-3">
+              Devenir membre
+          </a>
+
+          <div id="rnw-paylink-button"></div>
+          <script type="module">
+          import {PaylinkButton} from "https://donate.raisenow.io/button.js"
+          PaylinkButton.render('#rnw-paylink-button', {'solution-id': "njymw", 'solution-type': "donate", language: "fr", size: "large", width: "fixed", 'color-scheme': "dark"})
+          </script>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
 </section>
+
 {{end}}
 {{end}}
