--- a/themes/coHub/layouts/partials/cta.html
+++ b/themes/coHub/layouts/partials/cta.html
@@ -1,6 +1,6 @@
 {{with .Site.Data.cta}}
 {{ if .enable }}
-<section class="cta">
+<section class="cta" id="cta">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
