--- a/themes/coHub/layouts/partials/investor.html
+++ b/themes/coHub/layouts/partials/investor.html
@@ -40,7 +40,7 @@
           <p style="font-size: 16px; padding-right: 50px; padding-left: 50px; color:black;">
             L'Amicale du Wifi remercie chaleureusement ses nombreux <a href="https://www.lokalhelden.ch/fr/amicalewifi">parrains et marraines</a>. Soutenez votre espace de coworking local en devenant membre de notre association ou en faisant un don.
           </p>
-          <a href="/membre" class="btn btn-primary mb-3">
+          <a href="#service" class="btn btn-primary mb-3">
               Devenir membre
           </a>
 
