--- a/themes/coHub/layouts/partials/service.html
+++ b/themes/coHub/layouts/partials/service.html
@@ -14,8 +14,8 @@ PaylinkButton.render('#rnw-paylink-button-new-member', {'solution-id': "nysvx", 
               {{.subtitle | safeHTML}}
           </p>
         </div>
-        <section style="text-align: center;">
-          <p>L'Amicale du Wifi est un projet de l'association Fully Coworking. Ses fondateurs vivent le télétravail et pratiquent le coworking depuis plus de 10 ans. Avec cet espace, l'association veut contribuer à relocaliser l'activité professionnelle au centre du village, créer des liens dans la communauté locale et démocratiser le travail à distance de qualité.
+        <div class="cta-content">
+          <p style="padding-bottom: 50px;">L'Amicale du Wifi est un projet de l'association « Fully Coworking ». Ses fondateurs vivent le télétravail et pratiquent le coworking depuis plus de 10 ans. Avec cet espace, l'association veut contribuer à relocaliser l'activité professionnelle au centre du village, créer des liens dans la communauté locale et démocratiser le travail à distance de qualité.
           </p>
           <h2>Devenez membre de l'association</h2>
           <p>
@@ -24,9 +24,8 @@ PaylinkButton.render('#rnw-paylink-button-new-member', {'solution-id': "nysvx", 
           </br/>
           <div id="rnw-paylink-button-new-member"></div>
           </br/>
-          <p>Nous confirmerons votre nouveau statut par email.</p>
-        </section>
-
+          <p style="padding-bottom: 50px;">Nous confirmerons votre nouveau statut par email.</p>
+        </div>
       </div>
       {{ range .services}}
       <div class="col-lg-4 col-md-6">
