Integrate the conference room booking page in the pricing

--- a/themes/coHub/layouts/partials/pricing.html
+++ b/themes/coHub/layouts/partials/pricing.html
@@ -31,7 +31,7 @@
               <p>{{.feature  | safeHTML}}</p>
               {{end}}
           </div>
-          <a href="{{ .buttonTarget | absURL}}" class="btn btn-primary">Contactez nous</a>
+          <a href="{{ .buttonTarget | absURL}}" class="btn btn-primary">{{.buttonText}}</a>
         </div>
       </div>
       {{end}}
