Update membership reward

--- a/themes/coHub/layouts/partials/service.html
+++ b/themes/coHub/layouts/partials/service.html
@@ -19,7 +19,7 @@ PaylinkButton.render('#rnw-paylink-button-new-member', {'solution-id': "nysvx", 
           </p>
           <h2>Devenez membre de l'association</h2>
           <p>
-            Soutenez votre espace de coworking local en devenant membre de l'association à but non lucratif « Fully Coworking » pour 1 an. Vous serez invité à deux événements exclusifs par an et serez informés de l'évolution de l'association.
+            Soutenez votre espace de coworking local en devenant membre de l'association à but non lucratif « Fully Coworking » pour 1 an. Vous serez invité(e) aux événements de l'association et serez informé(e) de son évolution.
           </p>
           </br/>
           <div id="rnw-paylink-button-new-member"></div>
